--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ rust_data/
 scheduler_app/node_modules/
 restart_app/node_modules/
 shutdown_app/node_modules/
+rcon_app/node_modules/
 
 # Docker project generated files to ignore
 #  if you want to ignore files created by your editor/tools,
