--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,7 @@ node_modules
 scheduler_app/node_modules
 shutdown_app/node_modules
 restart_app/node_modules
+rcon_app/node_modules
 *.log
 rust_data
 .DS_Store
