--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,7 @@ scheduler_app/node_modules
 shutdown_app/node_modules
 restart_app/node_modules
 rcon_app/node_modules
+app.yml
 *.log
 rust_data
 .DS_Store
