--- a/app.yml
+++ b/app.yml
@@ -1,3 +1,4 @@
+# http://installer.71m.us/install?url=https://github.com/didstopia/rust-server
 name: RustServer
 image: ubuntu-14-04-x64
 min_size: 4gb
@@ -12,7 +13,7 @@ config:
     - ca-certificates
   runcmd:
     - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
-    - sudo cat deb https://apt.dockerproject.org/repo ubuntu-trusty main > /etc/apt/sources.list.d/docker.list && sudo apt-get update
+    - sudo echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list && sudo apt-get update
     - sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get dist-upgrade -y && sudo apt-get autoremove -y
     - sudo apt-get purge lxc-docker -y && sudo apt-get install linux-image-extra-$(uname -r) -y
     - sudo apt-get install docker-engine -y
