--- a/app.yml
+++ b/app.yml
@@ -12,9 +12,11 @@ config:
     - apt-transport-https
     - ca-certificates
   runcmd:
+    - DEBIAN_FRONTEND=noninteractive
+    - sudo apt-get clean && sudo apt-get update
     - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
     - sudo echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list && sudo apt-get update
     - sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get dist-upgrade -y && sudo apt-get autoremove -y
     - sudo apt-get purge lxc-docker -y && sudo apt-get install linux-image-extra-$(uname -r) -y
     - sudo apt-get install docker-engine -y
-    - sudo docker run didstopia/rust-server
+    #- sudo reboot
