--- a/app.yml
+++ b/app.yml
@@ -16,5 +16,5 @@ config:
     - sudo apt-get clean && sudo apt-get update
     - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
     - sudo echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list && sudo apt-get update
-    - sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get autoremove -y
+    #- sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get autoremove -y
     - sudo apt-get install docker-engine -y
