--- a/app.yml
+++ b/app.yml
@@ -8,12 +8,9 @@ config:
       groups: sudo
       shell: /bin/bash
       sudo: ['ALL=(ALL) NOPASSWD:ALL']
-  packages:
-    - apt-transport-https
-    - ca-certificates
   runcmd:
-    - DEBIAN_FRONTEND=noninteractive
     - sudo apt-get clean && sudo apt-get update
+    - sudo DEBIAN_FRONTEND=noninteractive apt-get -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" upgrade && sudo apt-get autoremove -y
     - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
     - sudo echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list && sudo apt-get update
     #- sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get autoremove -y
