--- a/restart_app/package.json
+++ b/restart_app/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "private": "true",
   "dependencies": {
-    "ws": "^1.1.0"
+    "request": "^2.79.0",
+    "ws": "^1.1.1"
   }
 }
